City Endpoints Production Ready

--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "css-loader": "^5.2.5",
     "defer-to-connect": "^2.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.5.0",
+    "json-loader": "^0.5.7",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "swagger-jsdoc": "^7.0.0-rc.6",
+    "style-loader": "^2.0.0",
+    "swagger-jsdoc": "6.0.0",
     "swagger-ui-express": "^4.1.6",
     "util": "^0.12.3",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.2"
+    "winston-daily-rotate-file": "^4.5.2",
+    "yaml-loader": "^0.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
@@ -43,7 +47,6 @@
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "json-loader": "^0.5.7",
     "nodemon": "^2.0.7",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.34.0",
