--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-PORT=
+PORT=1234
 
-JWT_SECRET=
+JWT_SECRET=x!A%D*G-KaPdSgVkYp3s6v8y/B?E(H+MbQeThWmZq4t7w!z$C&F)J@NcRfUjXn2r5u8x/A?
 
 DB_DIALECT=mysql
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=123.123.123.123
+DB_PORT=4321
+DB_USER=user
+DB_PASS=password
+DB_NAME=table
 DB_POOL_MAX=5
 DB_POOL_MIN=0
 DB_POOL_ACQUIRE=30000
