--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "scripts": {
     "build": "rm -rf ./Build/* && webpack",
     "start": "node ./Build/GiroZillaAPI.js",
-    "dev": "NODE_ENV=development nodemon --exec babel-node ./Src/Bin/www.js"
+    "dev": "NODE_ENV=development nodemon --exec babel-node ./Src/Bin/www.js",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
+    "copy-webpack-plugin": "^9.0.0",
     "cors": "^2.8.5",
     "css-loader": "^5.2.5",
     "defer-to-connect": "^2.0.1",
@@ -28,6 +31,7 @@
     "passport-jwt": "^4.0.0",
     "style-loader": "^2.0.0",
     "swagger-jsdoc": "6.0.0",
+    "swagger-ui-dist": "^3.49.0",
     "swagger-ui-express": "^4.1.6",
     "util": "^0.12.3",
     "winston": "^3.3.3",
@@ -47,9 +51,18 @@
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^27.0.3",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/Build/"
+    ]
   }
 }
